layout issues fixed

--- a/components/Home/components/Hero/Hero.module.scss
+++ b/components/Home/components/Hero/Hero.module.scss
@@ -10,7 +10,6 @@
     flex-direction: column;
     gap: 24px;
     padding: toRem(16);
-    width: 50%;
 
     .heroTitle {
       font-weight: 800;
@@ -55,6 +54,18 @@
       height: toRem(284);
       padding: toRem(99) 0 0 toRem(39);
       margin-bottom: toRem(91.13 * 2 + 92.87);
+
+      .heroTitle {
+        font-weight: 800;
+        font-size: toRem(40);
+        line-height: toRem(50);
+      }
+
+      .heroSubtitle {
+        font-weight: 500;
+        font-size: toRem(16);
+        line-height: toRem(26);
+      }
     }
 
     .heroImage {
@@ -72,26 +83,37 @@
   }
 
   @include desktop() {
+    flex-direction: row;
     .heroContent {
-      width: toRem(497);
-      height: toRem(359);
-      padding: toRem(185) 0 0 toRem(165);
-      margin-bottom: toRem(226 * 2);
+      width: 50%;
+      margin-left: toRem(165);
+      margin-bottom: toRem(226);
+      margin-top: toRem(186);
 
-      .button:hover {
-        background: $buttonTwoHover;
-        cursor: pointer;
+      .heroTitle {
+        font-weight: 800;
+        font-size: toRem(56);
+        line-height: toRem(71);
+        width: toRem(457);
+      }
+
+      .heroSubtitle {
+        font-weight: 500;
+        font-size: toRem(18);
+        line-height: toRem(28);
+        color: $grey;
+        width: toRem(445);
       }
     }
 
     .heroImage {
       position: absolute;
-      background-image: url('../../../../public/cawfeeLadyDesktop.webp');
-      width: toRem(991.63);
-      height: toRem(936.92);
+      width: 991.63px;
+      height: 936.92px;
       left: toRem(1000);
       top: toRem(-146.13);
-      background-size: toRem(991.63) toRem(936.92);
+      background-image: url('../../../../public/cawfeeLadyDesktop.webp');
+      background-size: 991.63px 936.92px;
       margin: 0;
       background-position: 5% 75%;
       width: 50%;
